# server-private/api/swagger.yaml
@@ -2,7 +2,7 @@
 swagger: "2.0"
 info:
   description: "RestfulAPI for CIVIS mobile application"
-  version: "1.0.0"
+  version: "1.0.1"
   title: "CIVIS | RestfulAPI"
 host: "polimi-dil-civis.herokuapp.com"
 basePath: "/api"
@@ -254,6 +254,55 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/Comment"
+        "400":
+          description: "Bad Request"
+        "401":
+          description: "Unauthorized"
+        "404":
+          description: "Not Found"
+      x-swagger-router-controller: "Comment"
+  /comment/like/{id}:
+    post:
+      tags:
+      - "comment"
+      operationId: "commentLikePost"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "id"
+        in: "path"
+        required: true
+        type: "number"
+        format: "integer"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            $ref: "#/definitions/Comment"
+        "400":
+          description: "Bad Request"
+        "401":
+          description: "Unauthorized"
+        "404":
+          description: "Not Found"
+      x-swagger-router-controller: "Article"
+    delete:
+      tags:
+      - "comment"
+      operationId: "commentLikeRemove"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "id"
+        in: "path"
+        required: true
+        type: "number"
+        format: "integer"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            $ref: "#/definitions/Comment"
         "400":
           description: "Bad Request"
         "401":
